--- a/yourticket.html
+++ b/yourticket.html
@@ -139,7 +139,7 @@
             </div>
 
             <div class="item">
-              <img src="assets/img/yt4.jpg" alt="Noticias" class="center-block">
+              <img src="assets/img/yt4.png" alt="Noticias" class="center-block">
             </div>
   
           </div>
