--- a/banca.html
+++ b/banca.html
@@ -26,7 +26,7 @@
   <link href="favicon.ico" rel="shortcut icon">
 
   <!-- Google Fonts -->
-  <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,700,700i|Raleway:300,400,500,700,800" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,700,700i|Raleway:300,400,500,700,800|Satisfy" rel="stylesheet">
 
   <!-- Bootstrap CSS File -->
   <link href="assets/lib/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -73,14 +73,14 @@
     <div class="container">
 
       <div id="logo" class="pull-left">
-        <a href="#hero"><img src="assets/img/logo.png" alt="" title="" /></img></a>
+        <a href="index.html"><h1 class="name-logo">Valeria</h1></a>
         <!-- Uncomment below if you prefer to use a text image -->
         <!--<h1><a href="#hero">Header 1</a></h1>-->
       </div>
 
       <nav id="nav-menu-container">
         <ul class="nav-menu">
-          <li><a href="index.html">Volver</a></li>
+          <li><a href="index.html#projects">Volver</a></li>
         </ul>
       </nav>
       <!-- #nav-menu-container -->
