--- a/index.html
+++ b/index.html
@@ -26,10 +26,9 @@
   <link href="favicon.ico" rel="shortcut icon">
 
   <!-- Google Fonts -->
-  <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,700,700i|Raleway:300,400,500,700,800" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css?family=Satisfy" rel="stylesheet">
-
-  <!-- Bootstrap CSS File -->
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,700,700i|Raleway:300,400,500,700,800|Satisfy" rel="stylesheet">
+  
+    <!-- Bootstrap CSS File -->
   <link href="assets/lib/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
   <!-- Libraries CSS Files -->
@@ -77,7 +76,7 @@
     <div class="container">
 
       <div id="logo" class="pull-left">
-        <a href="#hero"><img src="assets/img/logo.png" alt="" title="" /></img></a>
+        <a href="#hero"><h1 class="name-logo">Valeria</h1></a>
         <!-- Uncomment below if you prefer to use a text image -->
         <!--<h1><a href="#hero">Header 1</a></h1>-->
       </div>
@@ -182,6 +181,7 @@
   <!--==========================
   Porfolio Section
   ============================-->
+  <a name="projects"></a>
   <section id="portfolio">
     <div class="container wow fadeInUp">
       <div class="row">
