corregidos errores redaccion

--- a/banca.html
+++ b/banca.html
@@ -130,7 +130,7 @@
             </div>
           </div>
           <p class="about-text spacing">
-            Lo anterior nos ayudó a descubrir los puntos más críticos para considerar en nuestro producto, que son por ejemplo, no contar con beneficios, la seguridad en el proceso de transferencia de dinero es dudosa, se pierde mucho tiempo al sacar claves de manera presencial, la tasas de interés son muy altas y el trato preferencial es sólo con los clientes antigüos.
+            Lo anterior nos ayudó a descubrir los puntos más críticos para considerar en nuestro producto, que son por ejemplo, no contar con beneficios, la seguridad en el proceso de transferencia de dinero es dudosa, se pierde mucho tiempo al sacar claves de manera presencial, la tasas de interés son muy altas y el trato preferencial es sólo con los clientes antiguos.
           </p>
           <p class="about-text spacing">
             Como se mencionó, para poder complementar esta investigación, se realizó un estudio de las principales entidades bancarias del país, pero haciendo énfasis en los requisitos necesarios para obtener una cuenta joven/universitaria.
