--- a/community.html
+++ b/community.html
@@ -108,14 +108,14 @@
             La idea de realizar este proyecto comenzó debido a que me encontré con una boleta de gastos comunes del departamento en donde vivo, y empecé a hacer algunas preguntas, por ejemplo que significaban algunos conceptos que ahí ponían y si ese documento era comprensible para los los demás residentes, es por ello que la problemática que propuse fue "los habitantes de condominios encuentran que la manera de mostrar la información de los gastos comunes es poco clara."
           </p>
           <p class="about-text spacing">
-            Con el propósito de validar la problemática se llevé a cabo una encuesta que se encuentra en el siguiente enlace → <a href="https://docs.google.com/forms/d/1dpfFz6w48RaxI9_ODCqY3SgL3tiIHik2ETRq98jtxlQ/edit">cuestionario</a> la cual fue respondida por 39 personas. Adicionalmente para complementar la investigación realicé una entrevista a una administradora de condominios → <a href="https://docs.google.com/document/d/18NzdLhu70I2bglvhdrWoqr3gYZl3-gxnUS6ZUFxRZ0Q/edit">transcripción entrevista.</a>
+            Con el propósito de validar la problemática llevé a cabo una encuesta que se encuentra en el siguiente enlace → <a href="https://docs.google.com/forms/d/1dpfFz6w48RaxI9_ODCqY3SgL3tiIHik2ETRq98jtxlQ/edit">cuestionario</a> la cual fue respondida por 39 personas. Adicionalmente para complementar la investigación realicé una entrevista a una administradora de condominios → <a href="https://docs.google.com/document/d/18NzdLhu70I2bglvhdrWoqr3gYZl3-gxnUS6ZUFxRZ0Q/edit">transcripción entrevista.</a>
           </p>
           <p class="about-text spacing">
             Luego de analizar la información que obtuve, fue posible concluir que la problemática planteada no era válida, ya que la gran mayoría considera que la boleta de gastos comunes que reciben es que bastante clara. El siguiente gráfico muestra el resultado a esta pregunta, en ella se le especificó a los usuarios que 1 sería "Nada claro" y 5 "Muy claro."
           </p>
           <img src="assets/img/graphic1.jpg" alt="Gráfico 1" class="center-block">
           <p class="about-text spacing">
-            Fue por tal razón que  se decidió replantear el proyecto, basándose en otro de los hallazgos más relevantes, que tiene relación a cómo reciben esta información. Como se puede apreciar, el 77,8% recibe la boleta impresa en papel, pero luego en otra pregunta posterior ellos manifiestan su deseo de recibirla a través de una aplicación móvil.
+            Fue por tal razón que decidí replantear el proyecto, basándome en otro de los hallazgos más relevantes, que tiene relación a cómo reciben esta información. Como se puede apreciar, el 77,8% recibe la boleta impresa en papel, pero luego en otra pregunta posterior ellos manifiestan su deseo de recibirla a través de una aplicación móvil.
           </p>
           <div class="row">
             <div class="col-md-6">
