arreglo de proyectos y carusel

--- a/banca.html
+++ b/banca.html
@@ -104,9 +104,11 @@
       
       <div class="row">
         <div class="col-md-12 about-content">
+          <h3 class="about-text spacing">Desafío</h3>
           <p class="about-text spacing">
             El desafío que propuso este reto era crear una Banca 100% digital orientada a los jóvenes millennials. Para poder comprender mejor que tipo de información necesitabamos levantar del research, fue necesario investigar acerca de esta generación, sus prioridades - motivaciones y también investigar de los servicios bancarios que ofrecen las principales entidades del país.
           </p>
+          <h3 class="about-text spacing">Estudio y Descubrimientos</h3>
           <p class="about-text spacing">
             Con ello pudimos crear un <a href="https://docs.google.com/forms/d/1tCq4NLICnrvY2243lPahNNKVAkZBZAq9l3-dFJ0BXpI/edit">cuestionario</a> que difundimos por medio de facebook, orientado a conocer las necesidades de los jóvenes. Junto a esto se realizaron entrevistas a varias chicas que pertenecen a la generación millennial. 
           </p>
@@ -136,10 +138,12 @@
             Como se mencionó, para poder complementar esta investigación, se realizó un estudio de las principales entidades bancarias del país, pero haciendo énfasis en los requisitos necesarios para obtener una cuenta joven/universitaria.
           </p>
           <img src="assets/img/benchmark.png" alt="Gráfico 1" class="center-block">
+          <h3 class="about-text spacing">User Persona</h3>
           <p class="about-text spacing">
-            A partir de los hallazgos fue posible construir al user persona, y elaborar un storytelling para contar su historia.
-            <p class="about-text spacing"><em>“Fernanda es una joven estudiante, chilena de 21 años, trabaja de manera freelance en su tiempo libre y por lo tanto no tiene un ingreso fijo, pero aún así ella desea tener una cuenta corriente para poder manejar su dinero. Ha investigado en la mayoría de los bancos, pero se ha visto abrumada por la desorganización de la información que hay en los sitios web, se siente frustrada al no saber si cumple con los requisitos para acceder al servicio. Su mejor amiga le recomendó que visite el sitio de BANCA MILLENNIALS www.bmillennials.cl en donde podrá ver que requisitos necesita, de manera clara y rápida, para así poder solicitar su cuenta joven. BANCA MILLENNIALS logró que Fernanda estuviera más tranquila y feliz.”</em></p>
-          </p>
+            A partir de los hallazgos fue posible construir al user persona, y elaborar un storytelling para contar su historia.</p>
+            <img src="assets/img/user-persona.png" alt="User Persona" class="center-block">
+            <p class="about-text text-center margins"><em>“Fernanda es una joven estudiante, chilena de 21 años, trabaja de manera freelance en su tiempo libre y por lo tanto no tiene un ingreso fijo, pero aún así ella desea tener una cuenta corriente para poder manejar su dinero. Ha investigado en la mayoría de los bancos, pero se ha visto abrumada por la desorganización de la información que hay en los sitios web, se siente frustrada al no saber si cumple con los requisitos para acceder al servicio. Su mejor amiga le recomendó que visite el sitio de BANCA MILLENNIALS www.bmillennials.cl en donde podrá ver que requisitos necesita, de manera clara y rápida, para así poder solicitar su cuenta joven. BANCA MILLENNIALS logró que Fernanda estuviera más tranquila y feliz.”</em></p>
+          <h3 class="about-text spacing">Prototipo</h3>
           <p class="about-text spacing">
             Definido nuestro user persona y las principales problemáticas, decidimos que nuestro producto mínimo viable debía ser:
             <ul class="about-text spacing">
@@ -152,6 +156,7 @@
             Los primeros prototipos realizados los hicimos en papel para poder obtener conclusiones más rápido. A continuación se observan las vistas creadas para nuestro MVP. 
           </p>
           <img src="assets/img/prototipo.jpeg" alt="Gráfico 1" class="center-block">
+          <h3 class="about-text spacing">Testing</h3>
           <p class="about-text spacing">
             Para testear el producto pedimos la colaboración de compañeras de Laboratoria. Les dijimos que se pusieran en la situación de nuestra user persona, esto significa, ser estudiante de octavo semestre de alguna carrera y tener 21 años.
           </p>
