--- a/community.html
+++ b/community.html
@@ -104,9 +104,11 @@
 
       <div class="row">
         <div class="col-md-12 about-content">
+          <h3 class="about-text spacing">Desafío</h3>
           <p class="about-text spacing">
             La idea de realizar este proyecto comenzó debido a que me encontré con una boleta de gastos comunes del departamento en donde vivo, y empecé a hacer algunas preguntas, por ejemplo que significaban algunos conceptos que ahí ponían y si ese documento era comprensible para los los demás residentes, es por ello que la problemática que propuse fue "los habitantes de condominios encuentran que la manera de mostrar la información de los gastos comunes es poco clara."
           </p>
+          <h3 class="about-text spacing">Estudio y Descubrimientos</h3>
           <p class="about-text spacing">
             Con el propósito de validar la problemática llevé a cabo una encuesta que se encuentra en el siguiente enlace → <a href="https://docs.google.com/forms/d/1dpfFz6w48RaxI9_ODCqY3SgL3tiIHik2ETRq98jtxlQ/edit">cuestionario</a> la cual fue respondida por 39 personas. Adicionalmente para complementar la investigación realicé una entrevista a una administradora de condominios → <a href="https://docs.google.com/document/d/18NzdLhu70I2bglvhdrWoqr3gYZl3-gxnUS6ZUFxRZ0Q/edit">transcripción entrevista.</a>
           </p>
@@ -125,6 +127,7 @@
               <img src="assets/img/graphic3.jpg" alt="" class="center-block graphic">
             </div>
           </div>
+          <h3 class="about-text spacing">Prototipo</h3>
           <p class="about-text spacing">
             Gracias a lo anterior, fue posible orientar el producto hacia la creación de una aplicación, en la que se pudiera visualizar la boleta del gasto común, además de poder pagarla y junto a una serie de complementos que hacen que el proyecto sea más atractivo para los usuarios.
           </p>
@@ -134,6 +137,7 @@
           <p class="about-text spacing">
             Revisando las vistas de los wireframes, descubrí que era necesario hacer una reformulación de estas, ya que carecían de bastantes elementos y también de un nombre más atractivo. De esa manera, las vistas anteriores fueron reemplazadas por las que se encuentran en el siguiente enlace. → <a href="https://drive.google.com/drive/folders/1Netwyfmu98mu9OnHMLHPvdwEqsrtnW4L">Wireframe Reformulado</a>
           </p>
+          <h3 class="about-text spacing">Testing</h3>
           <p class="about-text spacing">
             Con la aplicación prototipada realicé los primeros testeos con usuarios. El objetivo principal de esta prueba era validar la usabilidad del producto, si es que era entendible e intuitivo. Para ello se les solicitó a las usuarias tres tareas, la primera era que efectuasen el pago de su boleta de gastos comunes, poniéndolas en la situación de que ya eran usuarias de la aplicación. Otra tarea que debieron realizar fue la de revisar su cuenta, y que expresaran si entendían los conceptos que ella presentaba, finalmente, se les solicitó que buscaran la forma de cerrar su sesión.
           </p>
