--- a/foodmap.html
+++ b/foodmap.html
@@ -101,58 +101,30 @@
       </div>
     </div>
     <div class="container about-container wow fadeInUp">
-      <!--<div class="row">
-        <div class="col-md-3 about-content align-center centered">
-          <img src="" alt="Your Ticket">
-        </div>
-        <div class="col-md-3 about-content align-center centered">
-          <img src="" alt="Your Ticket">
-        </div>
-        <div class="col-md-3 about-content align-center centered">
-          <img src="" alt="Your Ticket">
-        </div>
-        <div class="col-md-3 about-content align-center centered">
-          <img src="" alt="Your Ticket">
-        </div>
-      </div>-->
       <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
           <!-- Indicators -->
           <ol class="carousel-indicators">
             <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
             <li data-target="#carousel-example-generic" data-slide-to="1"></li>
             <li data-target="#carousel-example-generic" data-slide-to="2"></li>
-            <li data-target="#carousel-example-generic" data-slide-to="3"></li>
           </ol>
 
           <!-- Wrapper for slides -->
           <div class="carousel-inner" role="listbox">
             <div class="item active">
-              <img src="assets/img/food1.png" alt="Preventas" class="center-block">
+              <img src="assets/img/food1.png" alt="Splash" class="center-block">
             </div>
 
             <div class="item">
-              <img src="..." alt="Estrenos" class="center-block">
+              <img src="assets/img/food2.png" alt="Estrenos" class="center-block">
             </div>
 
             <div class="item">
-              <img src="..." alt="Buscador" class="center-block">
-            </div>
-
-            <div class="item">
-              <img src="..." alt="Noticias" class="center-block">
+              <img src="assets/img/food3.png" alt="Buscador" class="center-block">
             </div>
   
           </div>
 
-          <!-- Controls -->
-          <a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
-            <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
-            <span class="sr-only">Previous</span>
-          </a>
-          <a class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next">
-            <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
-            <span class="sr-only">Next</span>
-          </a>
         </div>
       <div class="row">
         <div class="col-md-12 about-content">
