--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
     <div class="container about-container wow fadeInUp">
       <div class="row">
         <div class="col-md-4 col-md-push-1 about-content align-center">
-          <img src="assets/img/valenh.jpg" alt="Valeria Navarrete" class="img-circle">
+          <img src="assets/img/valenh-foto.jpg" alt="Valeria Navarrete" class="img-circle">
         </div>
         <div class="col-md-6 about-content">
           <p class="about-text">
