linked in modificado

--- a/index.html
+++ b/index.html
@@ -270,7 +270,7 @@
           <div class="info">
             <div>
               <i class="fa fa-github"></i>
-              <p><a href="https://github.com/ValeritaPaz">https://github.com/ValeritaPaz</a></p>
+              <p><a href="https://github.com/ValeritaPaz" target="_blank">https://github.com/ValeritaPaz</a></p>
             </div>
           </div>
         </div>
@@ -279,7 +279,7 @@
           <div class="info">
             <div>
               <i class="fa fa-linkedin-square"></i>
-              <p><a href="https://www.linkedin.com/in/valerianavarrete/">https://www.linkedin.com/in/valerianavarrete/</a></p>
+              <p><a href="https://www.linkedin.com/in/valerianavarrete/" target="_blank">https://www.linkedin.com/in/vnavarrete/</a></p>
             </div>
           </div>
         </div>
